==> dannyf00/xDuino/board_pic24fj64ga102.c <==
#include "xduino.h"						//use xduino generic defs
#include "board_pic24fj64ga102.h"		//we use board-specific defs

void mcu_init(void) {
	//turn off all peripherals
	PMD1=0xffff;
	PMD2=0xffff;
	PMD3=0xffff;
	PMD4=0xffff;

	//all pins digital
	AD1PCFG = 0xffff;					//all pins digital
	//or AD1PCFGH
	//AD1PCFGH = 0xffff;					//all pins digital
	//or AD1PCFGL
	//AD1PCFGL = 0xffff;					//all pins digital

	//initialize timer1, 1:1 prescaler, overflow interrupt enabled
	_T1MD = 0;							//enable power to tmr
	T1CONbits.TON = 0;					//turn off rtc1
	PR1=/*period*/-1;					//minimum rtc resolution is 1ms
	T1CONbits.TCS = 0;					//use internal clock = Fosc / 4
	T1CONbits.TCKPS = 1;				//0->prescaler to 1:1, 1->8:1
	T1CONbits.TGATE = 0;				//rtc1 gate disabled
	IFS0bits.T1IF = 0;					//reset the flag
	IEC0bits.T1IE=1;					//rtc1 interrupt on
	TMR1 = 0;							//reset the timer/counter
	T1CONbits.TON = 1;					//turn on rtc1
	//timer0 is running now
	//ei();								//enable interrupts globally - always enabled by default
}

void pinMode(PIN_T pin, uint8_t mode) {
	GPIO_TypeDef *gpio;
	uint16_t mask;

	if (pin>=DMAX) return;								//invalid pin -> do nothing
	gpio=GPIO_PinDef[pin].gpio;							//get gpio address
	mask=GPIO_PinDef[pin].mask;
	switch (mode) {
		case OUTPUT:		IO_OUT(gpio->TRIS, mask); break;
		case INPUT_PULLUP:	IO_IN(gpio->TRIS, mask); IO_SET(gpio->PORT, mask); break;
		case INPUT:
		default:			IO_IN(gpio->TRIS, mask); break;
	}
}
